[gd_scene load_steps=5 format=3 uid="uid://d1522rj7ssdlf"]

[ext_resource type="Script" uid="uid://d1uvnsu46xmxa" path="res://Scenes/DeckEditor/cardpopup.gd" id="1_mlxko"]
[ext_resource type="Texture2D" uid="uid://b5dwj1ahq2vvn" path="res://charcard.png" id="2_7jaoj"]

[sub_resource type="Animation" id="Animation_7jaoj"]
resource_name = "open_popup"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fcdes"]
_data = {
&"open_popup": SubResource("Animation_7jaoj")
}

[node name="CardPopup" type="Popup"]
size = Vector2i(399, 299)
visible = true
script = ExtResource("1_mlxko")
metadata/_custom_type_script = "uid://d1uvnsu46xmxa"

[node name="Charcard" type="Sprite2D" parent="."]
visible = false
position = Vector2(245, 114)
scale = Vector2(0.21739, 0.21739)
texture = ExtResource("2_7jaoj")

[node name="CardContainer" type="VBoxContainer" parent="."]
offset_left = 148.0
offset_top = 33.0
offset_right = 188.0
offset_bottom = 73.0
scale = Vector2(4.53748, 4.53748)

[node name="AddButton" type="Button" parent="."]
offset_left = 168.0
offset_top = 244.0
offset_right = 207.0
offset_bottom = 275.0
text = "Add"

[node name="RemoveButton" type="Button" parent="."]
offset_left = 225.0
offset_top = 244.0
offset_right = 296.0
offset_bottom = 275.0
text = "Remove"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fcdes")
}
